--- a/index.html
+++ b/index.html
@@ -384,6 +384,18 @@
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/406431.pdf">Download</a></button></td>
 
                             </tr>
+                            <tr>
+                                <td><span > </span> Md Abu Kalam ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
+                                <td class="text-center"><span class="fw-bolder">01-May-2024</span> <span class="iconS"><i class="fa-solid fa-plane- 
+                                     departure"></i></span>30-May-2024 </td>
+                                <td class="text-center">406431</td>
+                                <td class="text-center">2496616422</td>
+                                <td class="fw-bolder  text-danger text-center"> <span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i> 
+                                 </span>Emergency</td>
+                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i> </i>30 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024">Download</a></button></td>
+
+                            </tr>
 
                             <tr>
                         
