adding New Vacation File

--- a/index.html
+++ b/index.html
@@ -386,14 +386,14 @@
                             </tr>
                             <tr>
                                 <td><span > </span> Md Abu Kalam ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
-                                <td class="text-center"><span class="fw-bolder">01-May-2024</span> <span class="iconS"><i class="fa-solid fa-plane- 
-                                     departure"></i></span>30-May-2024 </td>
-                                <td class="text-center">406431</td>
-                                <td class="text-center">2496616422</td>
+                                <td class="text-center"><span class="fw-bolder">04-May-2024</span> <span class="iconS"><i class="fa-solid fa-plane- 
+                                     departure"></i></span>03-Jun-2024 </td>
+                                <td class="text-center">408020</td>
+                                <td class="text-center">2531802011</td>
                                 <td class="fw-bolder  text-danger text-center"> <span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i> 
                                  </span>Emergency</td>
-                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i> </i>30 Days</td>
-                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024">Download</a></button></td>
+                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid "></i> </i>30 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/408020-Vacation Emrgincy.pdf">Download</a></button></td>
 
                             </tr>
 
@@ -421,6 +421,68 @@
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401732.pdf">Download</a></button></td>
 
                             </tr>
+
+                            <tr>
+                                <td>Sher Shah	 ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
+                                <td class="text-center"><span class="fw-bolder">27-Mar-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid 
+                                    fa-s"></i></span>09-April-2024</td>
+                                <td class="text-center">401785</td>
+                                <td class="text-center">2443400342</td>
+                                <td class="bg-succech text-center">Normal</td>
+                                <td class="text-center">45 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401785 -Vacation File.pdf">Download</a></button></td>
+
+                            </tr>
+                            <tr>
+                                <td>SADIK SAIDUR MAHADI	 ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
+                                <td class="text-center"><span class="fw-bolder">28-April-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid 
+                                    fa-s"></i></span>08-May-2024</td>
+                                <td class="text-center">401730</td>
+                                <td class="text-center">1009306679</td>
+                                <td class="bg-succech text-center"> <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span> Normal</td>
+                                <td class="text-center"> <span class="iconS m-2"><i class="fa-solid "></i></span>10 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401730 -Vacation File.pdf">Download</a></button></td>
+
+                            </tr>
+
+                            <tr>
+                                <td><span> </span>LOTIF MIAH AKRAB	! <span class="badge-secondary text-danger fw-bolder">New</span></td>
+                                <td class="text-center"><span class="fw-bolder">01-Aug-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 30-Oct-2024 </td>
+                                <td class="text-center">401779</td>
+                                <td class="text-center">2454342771</td>
+                                <td class="fw-bolder  text-center"><span class="iconS"></i></span>Normal</td>
+                                <td class="text-center"><span class="iconS m-2"></i></span>60 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401779 - Vacation File.pdf">Download</a></button></td>
+
+                            </tr>
+
+
+                            <tr>
+                                <td><span > </span> Bipad Mondal Madan	 ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
+                                <td class="text-center"><span class="fw-bolder">25-Apr-2024</span> <span class="iconS"><i class="fa-solid fa-plane- 
+                                     departure"></i></span>25-May-2024 </td>
+                                <td class="text-center">401800</td>
+                                <td class="text-center">2424962989</td>
+                                <td class="fw-bolder  text-danger text-center"> <span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i> 
+                                 </span>Emergency</td>
+                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid "></i> </i>30 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401800 - Vacation File.pdf">Download</a></button></td>
+
+                            </tr>
+
+                            <tr>
+                                <td><span> </span>MD JUWEL ISLAM    ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
+                                <td class="text-center"><span class="fw-bolder">01-Aug-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 30-Sep-2024 </td>
+                                <td class="text-center">401772</td>
+                                <td class="text-center">2428049825</td>
+                                <td class="fw-bolder  text-center"><span class="iconS"></i></span>Normal</td>
+                                <td class="text-center"><span class="iconS m-2"></i></span>60 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401772  Vacation File -.pdf">Download</a></button></td>
+
+                            </tr>
+
+
+                            
 
 
 
