--- a/index.html
+++ b/index.html
@@ -400,8 +400,7 @@
                             <tr>
                         
                                 <td> <span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>Reda Abdelmaged Mohammad Ibrahim</td>
-                                <td class="text-center"><span class="fw-bolder">06-March-2024</span> <span class="iconS"><i class="fa-solid fa-plane- 
-                                     departure"></i></span> 01-May-2024</td>
+                                <td class="text-center"><span class="fw-bolder">06-March-2024</span> <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 01-May-2024</td>
                                 <td class="text-center">405972</td>
                                 <td class="text-center">2503732816</td>
                                 <td class="bg-succech text-center bg-green" > <span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span> 
@@ -433,6 +432,7 @@
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401785 -Vacation File.pdf">Download</a></button></td>
 
                             </tr>
+
                             <tr>
                                 <td>SADIK SAIDUR MAHADI	 ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
                                 <td class="text-center"><span class="fw-bolder">28-April-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid 
