--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                             </tr>
 
                             <tr>
-                                <td ><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>ROBIUL</span></td>
+                                <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>ROBIUL</span></td>
                                 
                                 <td class="text-center"><span class="fw-bolder"><span class="fw-bolder">12-Feb-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 05-April-2024 </td>
                                 <td class="text-center">401822</td>
@@ -374,8 +374,8 @@
 
                             <tr>
                                 <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span> SHARIF MIAH	 </td>
-                                <td class="text-center"><span class="fw-bolder">10-March-2024</span> <span class="iconS"><i class="fa-solid fa-plane- 
-                                     departure"></i></span>30-March-2024 </td>
+                                <td class="text-center"><span class="fw-bolder">10-March-2024</span> <span class="iconS"><i class="fa-solid fa-plane-departure"></i> 
+                                     </span>30-March-2024 </td>
                                 <td class="text-center">406431</td>
                                 <td class="text-center">2496616422</td>
                                 <td class="fw-bolder  text-danger text-center"> <span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i> 
@@ -386,8 +386,8 @@
                             </tr>
                             <tr>
                                 <td><span > </span> Md Abu Kalam ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
-                                <td class="text-center"><span class="fw-bolder">04-May-2024</span> <span class="iconS"><i class="fa-solid fa-plane- 
-                                     departure"></i></span>03-Jun-2024 </td>
+                                <td class="text-center"><span class="fw-bolder">04-May-2024</span> <span class="iconS"><i class="fa-solid fa-plane-departure"></i>
+                                    </span>03-Jun-2024 </td>
                                 <td class="text-center">408020</td>
                                 <td class="text-center">2531802011</td>
                                 <td class="fw-bolder  text-danger text-center"> <span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i> 
@@ -423,8 +423,8 @@
 
                             <tr>
                                 <td>Sher Shah	 ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
-                                <td class="text-center"><span class="fw-bolder">27-Mar-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid 
-                                    fa-s"></i></span>09-April-2024</td>
+                                <td class="text-center"><span class="fw-bolder">27-Mar-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i> 
+                                </span>09-April-2024</td>
                                 <td class="text-center">401785</td>
                                 <td class="text-center">2443400342</td>
                                 <td class="bg-succech text-center">Normal</td>
@@ -435,8 +435,8 @@
 
                             <tr>
                                 <td>SADIK SAIDUR MAHADI	 ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
-                                <td class="text-center"><span class="fw-bolder">28-April-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid 
-                                    fa-s"></i></span>08-May-2024</td>
+                                <td class="text-center"><span class="fw-bolder">28-April-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid  fa-s"></i> 
+                                   </span>08-May-2024</td>
                                 <td class="text-center">401730</td>
                                 <td class="text-center">1009306679</td>
                                 <td class="bg-succech text-center"> <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span> Normal</td>
@@ -459,8 +459,8 @@
 
                             <tr>
                                 <td><span > </span> Bipad Mondal Madan	 ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
-                                <td class="text-center"><span class="fw-bolder">25-Apr-2024</span> <span class="iconS"><i class="fa-solid fa-plane- 
-                                     departure"></i></span>25-May-2024 </td>
+                                <td class="text-center"><span class="fw-bolder">25-Apr-2024</span> <span class="iconS"><i class="fa-solid fa-plane-departure"></i> 
+                                     </span>25-May-2024 </td>
                                 <td class="text-center">401800</td>
                                 <td class="text-center">2424962989</td>
                                 <td class="fw-bolder  text-danger text-center"> <span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i> 
