--- a/index.html
+++ b/index.html
@@ -265,8 +265,7 @@
 
                             <tr>
                                 <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>ROBIUL</span></td>
-                                
-                                <td class="text-center"><span class="fw-bolder"><span class="fw-bolder">12-Feb-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 05-April-2024 </td>
+                                <td class="text-center"><span class="fw-bolder">12-Feb-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 05-April-2024 </td>
                                 <td class="text-center">401822</td>
                                 <td class="text-center">2495725018</td>
                                 <td class="bg-succech text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span>Normal</td>
