--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
                             </tr>
 
                             <tr>
-                                <td>SADIK SAIDUR MAHADI	 ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
+                                <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>SADIK SAIDUR MAHADI	</td>
                                 <td class="text-center"><span class="fw-bolder">28-April-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid  fa-s"></i> 
                                    </span>08-May-2024</td>
                                 <td class="text-center">401730</td>
