--- a/index.html
+++ b/index.html
@@ -476,8 +476,18 @@
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401772  Vacation File -.pdf">Download</a></button></td>
 
                             </tr>
+                            <tr>
+                                <td><span> </span>KRISHNA BIND	  ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
+                                <td class="text-center"><span class="fw-bolder">01-Aug-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 30-Sep-2024</td>
+                                <td class="text-center">401751</td>
+                                <td class="text-center">2485304162</td>
+                                <td class="fw-bolder  text-center"><span class="iconS"></i></span>Normal</td>
+                                <td class="text-center"><span class="iconS m-2"></i></span>60 Days</td>
+                                <td><button class="btn btn-outline-warning"><a href="./Vacation File">Download</a></button></td>
+
+                            </tr>
                 
-                            <!-- <div>
+                           <!-- <div>
                                 <h2 class="card-title">
                                     Shoes!
                                     <div class="badge badge-secondary">NEW</div>
