--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
                                 <td class="text-center"><span class="fw-bolder">02-May-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 30-Jun-2024 </td>
                                 <td class="text-center">401776</td>
                                 <td class="text-center">2465439194</td>
-                                <td class="bg-succech text-center">Normal</td>
-                                <td class="text-center">60 Days</td>
+                                <td class="bg-succech text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span>Normal</td>
+                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span></i></span>60 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401776.pdf">Download</a></button></td>
 
                             </tr>
@@ -280,8 +280,8 @@
                                 <td class="text-center"><span class="fw-bolder">01-May-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 30-July-2024 </td>
                                 <td class="text-center">405410</td>
                                 <td class="text-center">2496981529</td>
-                                <td class="bg-succech text-center">Normal</td>
-                                <td class="text-center">60 Days</td>
+                                <td class="bg-succech text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i>Normal</td>
+                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>60 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/405410.pdf">Download</a></button></td>
 
                             </tr>
@@ -330,28 +330,28 @@
 
                             </tr>
                             <tr>
-                                <td><span > </span>Mohammad Raju </td>
-                                <td class="text-center"><span class="fw-bolder">09-May-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 03-April-2024 </td>
+                                <td><i class="fa-solid fa-circle-check"></i>Mohammad Raju</td>
+                                <td class="text-center"><span class="fw-bolder">09-May-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 03-July-2024 </td>
                                 <td class="text-center">405491</td>
                                 <td class="text-center">249523948</td>
-                                <td class="fw-bolder  text-center"><span class="iconS"></i></span>Normal</td>
-                                <td class="text-center"><span class="iconS m-2"></i></span>60 Days</td>
+                                <td class="fw-bolder  text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span></span>Normal</td>
+                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span></i></span>60 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/405491.pdf">Download</a></button></td>
 
                             </tr>
                             <tr>
-                                <td><span > </span>MOHAMMAD SOHEL ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
-                                <td class="text-center"><span class="fw-bolder">01-Jun-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 31-Jul-2024 </td>
+                                <td><i class="fa-solid fa-circle-check"></i></span>MOHAMMAD SOHEL</td>
+                                <td class="text-center"><span class="fw-bolder">01-Jun-2024</span><span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 31-Jul-2024 </td>
                                 <td class="text-center">405394</td>
                                 <td class="text-center">2496673779</td>
-                                <td class="fw-bolder  text-center"><span class="iconS"></i></span>Normal</td>
-                                <td class="text-center"><span class="iconS m-2"></i></span>60 Days</td>
+                                <td class="fw-bolder  text-center"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i> </span></span>Normal</td>
+                                <td class="text-center"><span class="iconS m-2"></i><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>60 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/405394.pdf">Download</a></button></td>
 
                             </tr>
                             <tr>
                                 <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i>Ashraf Ahmed Abdulhadi </td>
-                                <td class="text-center"><span class="fw-bolder">01-April-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 09-April-2024 </td>
+                                <td class="text-center"><span class="fw-bolder">01-April-2024</span>  <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span> 09-April-2024</td>
                                 <td class="text-center">405721</td>
                                 <td class="text-center">2420562395</td>
                                 <td class="fw-bolder  text-center text-danger"><span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span></i></span>Emergency</td>
@@ -362,7 +362,7 @@
                             
                             <tr>
                                 
-                                <td> <span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>SALMAN BIN ALI 	</td>
+                                <td> <span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span>SALMAN BIN ALI </td>
                                 <td class="text-center"><span class="fw-bolder">11-March-2024</span> <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i></span>03-April-2024 </td>
                                 <td class="text-center">401726</td>
                                 <td class="text-center">1060806096</td>
@@ -373,7 +373,7 @@
                             </tr>
 
                             <tr>
-                                <td><span class="iconS m-2">!<i class="fa-solid fa-circle-check"></i></span> SHARIF MIAH	 ! <span class="badge-secondary text-danger fw-bolder"> He Not Come Back Form Vacation</span></td>
+                                <td><span class="iconS m-2">!<i class="fa-solid fa-circle-check"></i></span> SHARIF MIAH !<span class="badge-secondary text-danger fw-bolder"> He Not Come Back Form Vacation</span></td>
                                 <td class="text-center"><span class="fw-bolder">10-March-2024</span> <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span>30-March-2024 </td>
                                 <td class="text-center">406431</td>
                                 <td class="text-center">2496616422</td>
@@ -393,7 +393,6 @@
                                  </span>Emergency</td>
                                 <td class="text-center"><span class="iconS m-2"><i class="fa-solid "></i> </i><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i>30 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/408020-Vacation Emrgincy.pdf">Download</a></button></td>
-
                             </tr>
 
                             <tr>
@@ -420,13 +419,14 @@
                             </tr>
 
                             <tr>
-                                <td>Sher Shah	 ! <span class="badge-secondary text-danger fw-bolder">New</span></td>
+                                <td> <span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span> Sher Shah	</td>
                                 <td class="text-center"><span class="fw-bolder">27-Mar-2024</span>  <span class="iconS"><i class=" fa-2xl fa-solid fa-s"></i> 
                                 </span>09-April-2024</td>
                                 <td class="text-center">401785</td>
                                 <td class="text-center">2443400342</td>
-                                <td class="bg-succech text-center">Normal</td>
-                                <td class="text-center">45 Days</td>
+                                <td class="bg-succech text-center bg-green" > <span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i></span> 
+                                </span> Normal</td>
+                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i> 45 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401785 -Vacation File.pdf">Download</a></button></td>
 
                             </tr>
@@ -454,14 +454,14 @@
 
                             </tr>
 
-                            <tr>
-                                <td><span class="iconS m-2"><i class="fa-solid fa-circle-check"></i></span> Bipad Mondal Madan</td>
+                            <tr class="">
+                                <td class=""><span class="iconS m-2 "><i class="fa-solid fa-circle-check"></i></span> Bipad Mondal Madan</td>
                                 <td class="text-center"><span class="fw-bolder">25-Apr-2024</span> <span class="iconS"><i class="fa-solid fa-plane-departure"></i></span>25-May-2024 </td>
                                 <td class="text-center">401800</td>
                                 <td class="text-center">2424962989</td>
                                 <td class="fw-bolder  text-danger text-center"> <span class="iconS"><i class=" fa-xl fa-solid fa-plane"></i> 
                                  </span>Emergency</td>
-                                <td class="text-center"><span class="iconS m-2"><i class="fa-solid "></i> </i>30 Days</td>
+                                <td class="text-center"><span class="iconS m-2 "><i class="fa-solid fa-circle-check"></i></span> </i>30 Days</td>
                                 <td><button class="btn btn-outline-warning"><a href="./Vacation File-2024/401800 - Vacation File.pdf">Download</a></button></td>
 
                             </tr>
