udtade some style

--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
             <div class="">
                 <div class="data_table ">
                     <div class="table-responsive">
-                        <table id="example" class="table ">
-                            <thead class="bg-primary-sublit table-border-red">
+                        <table id="example" class="table bg-slate-300">
+                            <thead class="bg-red-400 table-border">
                                 <tr class="text-capitalize"></tr>
-                                <th class="fw-bolder text-center text-xl ml-4  col-auto  font-serif">
+                                <th class="fw-bolder text-center text-xl ml-4    font-serif">
                                     <h5>Name</h5>
                                 </th>
-                                <th class="  fw-bolder text-center col-auto text-xl font-serif">
+                                <th class="  fw-bolder text-center  text-xl font-serif">
                                     <h5>Apply-Date</h5>
                                 </th>
-                                <th class="fw-bolder text-center col-auto text-xl font-serif">
+                                <th class="fw-bolder text-center  text-xl font-serif">
                                     <h5>Leave-last-Date</h5>
                                 </th>
                                 <th class="fw-bolder text-center  text-xl font-serif">
@@ -76,13 +76,13 @@
                                 <th class="text-bg-green text-center col-1 fw-bolder  text-xl font-serif">
                                     <h5>Condition</h5>
                                 </th>
-                                <th class="fw-bolder text-center col-auto  text-xl font-serif">
+                                <th class="fw-bolder text-center col-0 text-xl font-serif">
                                     <h5>Nationality</h5>
                                 </th>
-                                <th class="fw-bolder text-center col-auto   text-xl font-serif">
+                                <th class="fw-bolder text-center    text-xl font-serif">
                                     <h5>Name_Airprot</h5>
                                 </th>
-                                <th class="text-bg-info fw-bolder col-auto  text-center text-xl font-serif">
+                                <th class="text-bg-info fw-bolder   text-center text-xl font-serif">
                                     <h5>File</h5>
                                 </th>
 
