update some data

--- a/index.html
+++ b/index.html
@@ -409,6 +409,57 @@
                                                 href="./FILE WITH ZAHRA.pdf">Download</a></button></td>
 
                                 </tr>
+                                <tr class="font-serif text-lg italic">
+                                    <td class="">Hassan Ahmed AlZahrani	! <span
+                                            class="badge-secondary text-center text-danger fw-bolder">New</span></td>
+                                    <td>31-July-2024</td>
+                                    <td class="text-center"><span class="fw-bolder">04-Aug-2024</span></td>
+                                    <td class="text-center"><span class="fw-bolder">11-Aug-2024</span></td>
+
+                                    <td class="text-center">407344</td>
+                                    <td class="text-center">MANAGMENT</td>
+
+                                    <td class="bg-succech text-center"><i
+                                        class="fa-solid fa-circle-check text-green-600 text-center mr-4"></i> Normal</td>
+                                               
+                                    <td class="text-center">7 Days</td>
+
+                                    <td class="text-center "><i
+                                        class="fa-solid fa-circle-check text-green-600 text-center mr-4"></i>Approved</span></td>
+                                    <td class="text-center font-extralight">Saudi</td>
+                                    <td class="text-center font-extralight"><i
+                                        class="fa-solid fa-circle-check text-green-600 text-center mr-4"></i>Saudi</td>
+
+                                    <td class="text-cente"><button class="btn btn-outline-warning"><a
+                                                href="./FILE WITH ZAHRA.pdf">Download</a></button></td>
+
+                                </tr>
+                                <tr class="font-serif text-lg italic">
+                                    <td class="">SADIK SAIDUR MAHADI ! <span
+                                            class="badge-secondary text-center text-danger fw-bolder">New</span></td>
+                                    <td>31-July-2024</td>
+                                    <td class="text-center"><span class="fw-bolder">04-Aug-2024</span></td>
+                                    <td class="text-center"><span class="fw-bolder">08-Aug-2024</span></td>
+
+                                    <td class="text-center">401730</td>
+                                    <td class="text-center">Inside The Terminal/Indoor Plant
+                                    </td>
+
+                                    <td class="bg-succech text-center"><i
+                                        class="fa-solid fa-circle-check text-green-600 text-center mr-4"></i> Normal</td>
+                                               
+                                    <td class="text-center">4 Days</td>
+
+                                    <td class="text-center "><i
+                                        class="fa-solid fa-circle-check text-green-600 text-center mr-4"></i>Approved</span></td>
+                                    <td class="text-center font-extralight">Saudi</td>
+                                    <td class="text-center font-extralight"><i
+                                        class="fa-solid fa-circle-check text-green-600 text-center mr-4"></i>Saudi</td>
+
+                                    <td class="text-cente"><button class="btn btn-outline-warning"><a
+                                                href="./FILE WITH ZAHRA.pdf">Download</a></button></td>
+
+                                </tr>
 
 
                                 <!-- <tr>
