update some data

--- a/index.html
+++ b/index.html
@@ -460,6 +460,52 @@
                                                 href="./FILE WITH ZAHRA.pdf">Download</a></button></td>
 
                                 </tr>
+                                <tr class="font-serif text-lg italic">
+                                    <td class="">MD BACHU MIAH	 ! <span
+                                            class="badge-secondary text-center text-danger fw-bolder">New</span></td>
+                                    <td>1-Aug-2024</td>
+                                    <td class="text-center"><span class="fw-bolder">01-Dec-2024</span></td>
+                                    <td class="text-center"><span class="fw-bolder">01-Mar-2024</span></td>
+
+                                    <td class="text-center">401754</td>
+                                    <td class="text-center">Royal Terminal</td>
+                                    
+
+                                    <td class="bg-succech text-center bg-green"> <span class="iconS"><i
+                                                class=" fa-xl fa-solid fa-plane"></i></span></span> Normal</td>
+                                    <td class="text-center">90 Days</td>
+
+                                    <td class="text-center font-light">Under_Processing</td>
+                                    <td class="text-center font-extralight">Bangladeshi</td>
+                                    <td class="text-center font-extralight">HSIA_Dhaka</td>
+
+                                    <td class="text-cente"><button class="btn btn-outline-warning"><a
+                                                href="./FILE WITH ZAHRA.pdf">Download</a></button></td>
+
+                                </tr>
+                                <tr class="font-serif text-lg italic">
+                                    <td class="">MOHD ZIYA UDDIN ! <span
+                                            class="badge-secondary text-center text-danger fw-bolder">New</span></td>
+                                    <td>1-Aug-2024</td>
+                                    <td class="text-center"><span class="fw-bolder">01-Dec-2024</span></td>
+                                    <td class="text-center"><span class="fw-bolder">30-Jan-2025</span></td>
+
+                                    <td class="text-center">401754</td>
+                                    <td class="text-center">Royal Terminal</td>
+                                    
+
+                                    <td class="bg-succech text-center bg-green"> <span class="iconS"><i
+                                                class=" fa-xl fa-solid fa-plane"></i></span></span> Normal</td>
+                                    <td class="text-center">60 Days</td>
+
+                                    <td class="text-center font-light">Under_Processing</td>
+                                    <td class="text-center font-extralight">Bangladeshi</td>
+                                    <td class="text-center font-extralight">HSIA_Dhaka</td>
+
+                                    <td class="text-cente"><button class="btn btn-outline-warning"><a
+                                                href="./FILE WITH ZAHRA.pdf">Download</a></button></td>
+
+                                </tr>
 
 
                                 <!-- <tr>
