--- a/index.html
+++ b/index.html
@@ -506,6 +506,29 @@
                                                 href="./FILE WITH ZAHRA.pdf">Download</a></button></td>
 
                                 </tr>
+                                <tr class="font-serif text-lg italic">
+                                    <td class=""> Syed Mir Mohammd ! <span
+                                            class="badge-secondary text-center text-danger fw-bolder">New</span></td>
+                                    <td>1-Aug-2024</td>
+                                    <td class="text-center"><span class="fw-bolder">01-Jan-2025</span></td>
+                                    <td class="text-center"><span class="fw-bolder">02-May-2025</span></td>
+
+                                    <td class="text-center">410094</td>
+                                    <td class="text-center">Royal Terminal</td>
+                                    
+
+                                    <td class="bg-succech text-center bg-green"> <span class="iconS"><i
+                                                class=" fa-xl fa-solid fa-plane"></i></span></span> Normal</td>
+                                    <td class="text-center">60 Days</td>
+
+                                    <td class="text-center font-light">Under_Processing</td>
+                                    <td class="text-center font-extralight">Indian</td>
+                                    <td class="text-center font-extralight">Hydirabad_Airprot</td>
+
+                                    <td class="text-cente"><button class="btn btn-outline-warning"><a
+                                                href="./FILE WITH ZAHRA.pdf">Download</a></button></td>
+
+                                </tr>
 
 
                                 <!-- <tr>
