--- a/index.html
+++ b/index.html
@@ -388,11 +388,11 @@
 
                                 </tr>
                                 <tr class="font-serif text-lg italic">
-                                    <td class="">MD Asad ! <span
-                                            class="badge-secondary text-center text-danger fw-bolder"><i class="fa-solid fa-triangle-exclamation mr-2"></i></span></td>
-                                    <td>31-July-2024</td>
-                                    <td class="text-center"><span class="fw-bolder">05-Aug-2024</span></td>
-                                    <td class="text-center"><span class="fw-bolder">04-Sep-2024</span></td>
+                                    <td class="">MD Asad  <span
+                                            class="badge-secondary text-center text-danger fw-bolder"><i class="fa-solid  mr-2"></i></span></td>
+                                    <td>7-Aug-2024</td>
+                                    <td class="text-center"><span class="fw-bolder">11-Aug-2024</span></td>
+                                    <td class="text-center"><span class="fw-bolder">11-Sep-2024</span></td>
 
                                     <td class="text-center">410338</td>
                                     <td class="text-center">Nursery</td>
@@ -401,7 +401,7 @@
                                                 class="fa-xl fa-solid fa-plane text-red-700"></i>Emergency</td>
                                     <td class="text-center">30 Days</td>
 
-                                    <td class="text-center "><span class="text-red-600 font-serif"><i class="fa-solid fa-triangle-exclamation mr-2"></i>He Get Panltiy</span></td>
+                                    <td class="text-center "><span class="text-green-600 font-serif"><i class="fa-solid  mr-2"></i>Approved</span></td>
                                     <td class="text-center font-extralight">Bangladeshi</td>
                                     <td class="text-center font-extralight">HSIA_Dhaka</td>
 
@@ -514,7 +514,7 @@
                                     <td class="text-center"><span class="fw-bolder">02-May-2025</span></td>
 
                                     <td class="text-center">410094</td>
-                                    <td class="text-center">Royal Terminal</td>
+                                    <td class="text-center">Workshop_IP</td>
                                     
 
                                     <td class="bg-succech text-center bg-green"> <span class="iconS"><i
